<resources>
    <string name="shared_preference_name" translatable="false">uk.co.rosehilltimber.rosehilltreatmentapp.shared_preferences</string>
    <string name="shared_preference_key_passcode" translatable="false">PASSCODE</string>
    <string name="shared_preference_key_one_drive_app_id" translatable="false">ONE_DRIVE_APP_ID</string>
    <string name="shared_preference_key_start_of_financial_year" translatable="false">START_OF_FINANCIAL_YEAR</string>
    <string name="shared_preference_key_end_of_financial_year" translatable="false">END_OF_FINANCIAL_YEAR</string>
    <string name="shared_preference_key_initial_treat_number" translatable="false">INITIAL_TREAT_NUMBER</string>
    <string name="shared_preference_key_current_week" translatable="false">CURRENT_WEEK</string>
    <string name="shared_preference_key_maximum_green_tank_volume" translatable="false">MAXIMUM_GREEN_TANK_VOLUME</string>
    <string name="shared_preference_key_maximum_brown_tank_volume" translatable="false">MAXIMUM_BROWN_TANK_VOLUME</string>
    <string name="shared_preference_summary_passcode">Define the applications settings passcode - necessary to avoid tampering. Note: failing to recall the password will result in your ability to reconfigure the application settings.</string>
    <string name="shared_preference_summary_one_drive_app_id">The registered Microsoft OneDrive App ID. This permits exported files to be backed / saved to the cloud.</string>
    <string name="shared_preference_summary_start_of_financial_year">The start date of the financial year. Note: changing this date mid-year will result in undefined app behaviour, week offsets, and potentially corrupt data.</string>
    <string name="shared_preference_summary_end_of_financial_year">The end date of the financial year. However, unlike the start date, the end date does not impose strict algorithmic requirements. Instead, this serves as a means of validating week date boundaries.</string>
    <string name="shared_preference_summary_initial_treat_number">Defines the smallest number permissible within the database.</string>
    <string name="shared_preference_summary_current_week">Denotes the date (or timestamp) of the week currently being worked on.</string>
    <string name="shared_preference_summary_maximum_green_tank_volume">Imposes a strict maximum tank volume for the green treatment tank. Exceeding this value during treat creation will result the users ability to create / save the defined / updated treat for Green or Round Green treat types.</string>
    <string name="shared_preference_summary_maximum_brown_tank_volume">Imposes a strict maximum tank volume for the brown treatment tank. Exceeding this value during treat creation will result the users ability to create / save the defined / updated treat for Brown treat type.</string>
    <string name="util_save">SAVE</string>
    <string name="util_edit">EDIT</string>
    <string name="util_delete">DELETE</string>
    <string name="util_complete">COMPLETE</string>
    <string name="util_continue">CONTINUE</string>
    <string name="util_leave">LEAVE</string>
    <string name="util_undo">UNDO</string>
    <string name="util_update">UPDATE</string>
    <string name="util_create">CREATE</string>
    <string name="util_proceed_anyway">PROCEED ANYWAY</string>
    <string name="util_proceed">PROCEED</string>
    <string name="util_treat">Treat</string>
    <string name="util_treats">Treats</string>
    <string name="util_treatments">Treatments</string>
    <string name="util_volume">Volume</string>
    <string name="util_new">NEW</string>
    <string name="util_quality">Quantity</string>
    <string name="util_length">Length (m)</string>
    <string name="util_diameter">Diameter (m)</string>
    <string name="util_breadth">Breadth (mm)</string>
    <string name="util_height">Height (mm)</string>
    <string name="util_new_delete">NEW\\DELETE</string>
    <string name="util_new_treat">NEW TREATMENT</string>
    <string name="util_new_week">NEW WEEK</string>
    <string name="util_volume_units">m\u00B3</string>
    <string name="util_passcode">PASSCODE</string>
    <string name="util_truncate_tables">TRUNCATE TABLES</string>
    <string name="util_reset_financial_year">RESET FINANCIAL YEAR</string>
    <string name="util_delete_exported_files">DELETE EXPORTED FILES</string>
    <string name="util_initial_treat_number">Initial Treatment Number</string>
    <string name="util_one_drive_app_id">OneDrive AppID</string>
    <string name="util_number">Number</string>
    <string name="field_quantity_label">Quantity:</string>
    <string name="tab_database">DATABASE</string>
    <string name="tab_exported_files">EXPORTED FILES</string>
    <string name="dialog_title_initial_treat_number_overflow">Error - Invalid Initial Treat Number!</string>
    <string name="dialog_title_passcode_too_short_cant_set">Error - Passcode Too Short!</string>
    <string name="dialog_title_leaving_in_edit_mode">Discard Changes?</string>
    <string name="dialog_title_enter_edit_mode">Enter Edit-Mode?</string>
    <string name="dialog_title_save_edits">Save Edits?</string>
    <string name="dialog_title_select_timber_pack_type">Timber Pack Type</string>
    <string name="dialog_title_tank_volume_reached">Tank Volume Reached!</string>
    <string name="dialog_title_treat_creation_confirmation">Create Treat?</string>
    <string name="dialog_title_invalid_timber_pack_dimensions">Invalid Dimensions!</string>
    <string name="dialog_title_timber_pack_deletion_conformation">Delete Timber Pack?</string>
    <string name="dialog_title_confirm_new_current_week_date">Confirm New Current Week Date</string>
    <string name="dialog_title_week_date_before_the_start_of_financial_year">Invalid Date!</string>
    <string name="dialog_title_week_date_after_the_end_of_financial_year">Warning!</string>
    <string name="dialog_title_select_treat_type">Select Treat Type</string>
    <string name="dialog_title_complete_current_working_week">Complete Current Working Week?</string>
    <string name="dialog_title_treat_deletion_confirmation">Delete Treat Instance?</string>
    <string name="dialog_title_select_current_week_date">Select Current Week Date</string>
    <string name="dialog_title_cancel_edits">Cancel?</string>
    <string name="dialog_title_please_wait">Please Wait..</string>
    <string name="dialog_title_creation_failure">Creation Failure!</string>
    <string name="dialog_title_update_failure">Update Failure!</string>
    <string name="dialog_title_treat_creation_failure_no_timber_packs">No Data!</string>
    <string name="dialog_title_treat_save_failure_no_changes">Error - No Changes!</string>
    <string name="dialog_title_treat_save_failure_no_timber_packs">Error - No Timber Packs!</string>
    <string name="dialog_title_failed_to_delete_file">Error - Failed To Delete The File.</string>
    <string name="dialog_title_one_drive_undefined_or_invalid_app_id">Error - Invalid App ID!</string>
    <string name="dialog_title_one_drive_out_of_quota">Error - Out of Quota!</string>
    <string name="dialog_title_one_drive_invalid_file_name">Error - Invalid File Name!</string>
    <string name="dialog_title_one_drive_no_network_connection">Error - No Network Connectivity!</string>
    <string name="dialog_title_one_drive_cant_access_file">Error - Could Not Access File!</string>
    <string name="dialog_title_one_drive_no_file_specified">Error - No File Specified!</string>
    <string name="dialog_title_one_drive_unknown">Error Unknown!</string>
    <string name="dialog_title_media_unmounted">Error - SD Card Unmounted!</string>
    <string name="dialog_title_treat_directory_not_found">Error - Treat Directory Not Found!</string>
    <string name="dialog_title_undefined_financial_year">Error - Undefined Financial Year Dates!</string>
    <string name="dialog_title_delete_current_week_treatment">Delete Treatment?</string>
    <string name="dialog_title_save_prior_week_deletions">Save Deletions?</string>
    <string name="dialog_title_cannot_save_prior_week_no_deletions_detected">Error - No Deletions!</string>
    <string name="dialog_title_creating_a_treat_leaves_edit_mode">Leaving Edit-Mode!</string>
    <string name="dialog_title_settings_authorisation">Passcode</string>
    <string name="dialog_title_invalid_passcode">Invalid Passcode!</string>
    <string name="dialog_title_max_tank_volume_overflow">Error - Tank Overflow!</string>
    <string name="dialog_title_end_of_financial_year_before_start">Error - Invalid End of Financial Year Date!</string>
    <string name="dialog_title_start_of_financial_year_after_end">Error - Invalid Start of Financial Year Date!</string>
    <string name="dialog_title_financial_year_longer_than_year">Warning - Long Financial Year!</string>
    <string name="dialog_title_confirm_truncate_tables">Drop Tables?</string>
    <string name="dialog_title_confirm_reset_financial_year">Reset Financial Year?</string>
    <string name="dialog_title_confirm_delete_all_exported_files">Delete All Exported Files?</string>
    <string name="dialog_title_financial_year_successfully_reset">Financial Year Reset!</string>
    <string name="dialog_title_failed_to_reset_financial_year">Error - Failed to Reset Financial Year!</string>
    <string name="fragment_settings_preference_title">App Preferences</string>
    <string name="fragment_settings_preference_category_authentication">Authentication Settings</string>
    <string name="fragment_settings_preference_etp_passcode">Application Settings Passcode</string>
    <string name="fragment_settings_preference_etp_one_drive_app_id">OneDrive App ID</string>
    <string name="fragment_settings_preference_etp_dialog_title_passcode">Application Passcode</string>
    <string name="fragment_settings_preference_etp_dialog_title_one_drive_app_id">Microsoft OneDrive App ID</string>
    <string name="fragment_settings_preference_category_financial_year">Financial Year</string>
    <string name="fragment_settings_preference_dialog_title_end_of_financial_year">Financial Year Start Date</string>
    <string name="fragment_settings_preference_dialog_title_start_of_financial_year">Financial Year End Date</string>
    <string name="fragment_settings_preference_category_treats">Treatments</string>
    <string name="fragment_settings_preference_etp_initial_treat_number">Initial Treat Number</string>
    <string name="fragment_settings_preference_etp_dialog_initial_treat_number">Initial Treatment Number</string>
    <string name="fragment_settings_preference_category_tank_volumes">Maximum Tank Volumes</string>
    <string name="fragment_settings_preference_etp_maximum_green_tank_volume">Green Tank</string>
    <string name="fragment_settings_preference_etp_maximum_brown_tank_volume">Brown Tank</string>
    <string name="fragment_settings_preference_etp_dialog_title_maximum_green_tank_volume">Green Tank Maximum Volume</string>
    <string name="fragment_settings_preference_etp_dialog_title_maximum_brown_tank_volume">Brown Tank Maximum Volume</string>
    <string name="not_applicable">N/A</string>
    <string name="menu_settings_item_export_yearly_summary_name">Export Yearly Summary</string>
    <string name="menu_settings_item_delete_exported_files_name">Delete Exported Files</string>
    <string name="menu_settings_item_truncate_tables_name">Truncate (Clear) Tables</string>
    <string name="menu_settings_item_reset_financial_year_name">Reset Financial Year</string>
    <string name="item_treat_tv_number_label">Number:</string>
    <string name="item_treat_tv_packs_count_label">Packs:</string>
    <string name="item_treat_tv_volume_label">Volume:</string>
    <string name="item_treat_tv_type_label">Type:</string>
    <string name="item_treat_iv_colour_tag_content_description">Treatment Type Colour Tag.</string>
    <string name="item_treat_ib_delete_option_content_description">Delete Treatment</string>
</resources>