<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:title="@string/fragment_settings_preference_title">

    <!-- Displays the account related preferences. -->
    <PreferenceCategory
            android:title="@string/fragment_settings_preference_category_authentication">

        <!-- Application Passcode. -->
        <EditTextPreference
                android:title="@string/fragment_settings_preference_etp_passcode"
                android:dialogTitle="@string/fragment_settings_preference_etp_dialog_title_passcode"
                android:hint="@string/util_passcode"
                android:inputType="numberPassword"
                android:digits="0123456789"
                android:key="@string/shared_preference_key_passcode"
                android:summary="@string/shared_preference_summary_passcode"/>

        <!-- Microsoft OneDrive App ID. -->
        <EditTextPreference
                android:title="@string/fragment_settings_preference_etp_one_drive_app_id"
                android:dialogTitle="@string/fragment_settings_preference_etp_dialog_title_one_drive_app_id"
                android:hint="@string/util_one_drive_app_id"
                android:inputType="text"
                android:key="@string/shared_preference_key_one_drive_app_id"
                android:summary="@string/shared_preference_summary_one_drive_app_id"/>

    </PreferenceCategory>

    <!-- Preference category for altering the start and end dates of the financial year. -->
    <PreferenceCategory
            android:title="@string/fragment_settings_preference_category_financial_year">

        <DatePickerPreference
                android:title="@string/fragment_settings_preference_dialog_title_end_of_financial_year"
                android:persistent="false"
                android:key="@string/shared_preference_key_start_of_financial_year"
                android:summary="@string/shared_preference_summary_start_of_financial_year"/>

        <DatePickerPreference
                android:title="@string/fragment_settings_preference_dialog_title_start_of_financial_year"
                android:persistent="false"
                android:key="@string/shared_preference_key_end_of_financial_year"
                android:summary="@string/shared_preference_summary_end_of_financial_year"/>

    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/fragment_settings_preference_category_treats">

        <EditTextPreference
                android:title="@string/fragment_settings_preference_etp_initial_treat_number"
                android:dialogTitle="@string/fragment_settings_preference_etp_dialog_initial_treat_number"
                android:hint="@string/util_number"
                android:inputType="number"
                android:key="@string/shared_preference_key_initial_treat_number"
                android:summary="@string/shared_preference_summary_initial_treat_number"/>

    </PreferenceCategory>

    <!-- Preferences for altering the tank volumes -->
    <PreferenceCategory
            android:title="@string/fragment_settings_preference_category_tank_volumes">

        <EditTextPreference
                android:title="@string/fragment_settings_preference_etp_maximum_green_tank_volume"
                android:dialogTitle="@string/fragment_settings_preference_etp_dialog_title_maximum_green_tank_volume"
                android:hint="@string/util_volume"
                android:inputType="numberDecimal"
                android:key="@string/shared_preference_key_maximum_green_tank_volume"
                android:summary="@string/shared_preference_summary_maximum_green_tank_volume"/>

        <EditTextPreference
                android:title="@string/fragment_settings_preference_etp_maximum_brown_tank_volume"
                android:dialogTitle="@string/fragment_settings_preference_etp_dialog_title_maximum_brown_tank_volume"
                android:hint="@string/util_volume"
                android:inputType="numberDecimal"
                android:key="@string/shared_preference_key_maximum_brown_tank_volume"
                android:summary="@string/shared_preference_summary_maximum_brown_tank_volume"/>

    </PreferenceCategory>

</PreferenceScreen>