<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:minHeight="72dp"
        android:paddingEnd="?listPreferredItemPaddingRight"
        android:paddingLeft="?listPreferredItemPaddingLeft"
        android:paddingRight="?listPreferredItemPaddingRight"
        android:paddingStart="?listPreferredItemPaddingLeft"
        android:descendantFocusability="blocksDescendants">

    <!-- The type of treatment i.e. the type of packs within. -->
    <ImageView
            android:id="@+id/item_treat_iv_colour_tag"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="24dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_treat_type_green"
            android:clickable="false"
            android:contentDescription="@string/item_treat_iv_colour_tag_content_description"/>

    <!-- Fields describing the contents of the treatment. -->
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignWithParentIfMissing="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_toLeftOf="@+id/item_treat_ib_delete_action"
            android:layout_toRightOf="@+id/item_treat_iv_colour_tag"
            android:layout_toStartOf="@+id/item_treat_ib_delete_action"
            android:layout_toEndOf="@+id/item_treat_iv_colour_tag"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:paddingTop="16dp">

        <!-- The treatment no. -->
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:layout_marginEnd="4dp"
                    android:singleLine="true"
                    android:text="@string/item_treat_tv_number_label"
                    style="@style/TextAppearance.AppCompat.Body2"/>
            <TextView
                    android:id="@+id/item_treat_tv_number_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/not_applicable"
                    style="@style/TextAppearance.AppCompat.Body2"/>
        </LinearLayout>

        <!-- The number of packs the treatment has. -->
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:layout_marginEnd="4dp"
                    android:singleLine="true"
                    android:text="@string/item_treat_tv_packs_count_label"
                    style="@style/TextAppearance.AppCompat.Body1"/>
            <TextView
                    android:id="@+id/item_treat_tv_packs_count_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/not_applicable"
                    style="@style/TextAppearance.AppCompat.Body1"/>
        </LinearLayout>

        <!-- The treatment total pack volume. -->
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:layout_marginEnd="4dp"
                    android:singleLine="true"
                    android:text="@string/item_treat_tv_volume_label"
                    style="@style/TextAppearance.AppCompat.Body1"/>
            <TextView
                    android:id="@+id/item_treat_tv_volume_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:layout_marginEnd="4dp"
                    android:singleLine="true"
                    android:text="@string/not_applicable"
                    style="@style/TextAppearance.AppCompat.Body1"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/util_volume_units"
                    style="@style/TextAppearance.AppCompat.Body1"/>

        </LinearLayout>

        <!-- The treatment type field. -->
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:layout_marginEnd="4dp"
                    android:singleLine="true"
                    android:text="@string/item_treat_tv_type_label"
                    style="@style/TextAppearance.AppCompat.Body1"/>
            <TextView
                    android:id="@+id/item_treat_tv_type_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/not_applicable"
                    style="@style/TextAppearance.AppCompat.Body1"/>
        </LinearLayout>

    </LinearLayout>

    <!-- Image button employed in order to write the week data to the list. -->
    <ImageButton
            android:id="@+id/item_treat_ib_delete_action"
            android:layout_width="@dimen/item_ib_width"
            android:layout_height="@dimen/item_ib_height"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="19dp"
            android:focusable="false"
            android:src="@drawable/ic_close"
            android:background="@android:color/transparent"
            android:contentDescription="@string/item_treat_ib_delete_option_content_description"/>

</RelativeLayout>
